2000-11-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m ([NSCalendarDate -initWithString:
	calendarFormat:locale:]): try getting timezone by name before
	attempting by abbreviation - thus preserving exact name isf possible.

2000-11-03  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSCalendarDate.m ([NSCalendarDate -initWithString:
	calendarFormat:locale:]): assign calendar format.

2000-11-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Update for placeholder class.
	* Source/GSString.m: Updates for optimisations using placeholder class.

2000-11-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSXML.m: External entity loader revisions completed.
	* Documentation/gsdoc/GSXML.gsdoc: changes to api
	* Documentation/gsdoc/GSXMLParser.gsdoc: ditto
	* Documentation/gsdoc/GSSAXHandler.gsdoc: ditto

2000-11-01  Manuel Guesdon <mguesdon@orange-concept.com>
	* Headers/Foundation/GSXML.h: added GSXMLNode 
		propertiesAsDictionaryWithKeyTransformationSel:
	* Source/GSXML.m: added GSXMLNode 
		propertiesAsDictionaryWithKeyTransformationSel:

2000-11-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fixed uninitialised variable bug.
	* Source/NSString.m: Fixed error in xml property list parsing
	* Source/GSXML.m: Various SAX things to use default implementation.

2000-10-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Implemented
	([-initWithCharactersNoCopy:length:freeWhenDone:]) and
	([-initWithCStringNoCopy:length:freeWhenDone:]) for NSMutableString.
	([-initWithCStringNoCopy:length:freeWhenDone:]) for NSString.

2000-10-31  Richard Frith-Macdonald <rfm@gnu.org>

	Loads of files modified, fast.x removed.
	Found it unexpectedly easy to tidy up so that all functions for
	accessing the runtime are now in NSObjCRuntime.h.
	Now all :-) we need are Apple runtime implementations, configuration
	auto-detect for the apple runtime, and loads of updating of any