@@ -1,3 +1,8 @@
+2000-11-06 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSString.m: ([GSMutableString substringWithRange:]) fix to
+	allocate inline string classes for substrings.
+
 2000-11-04 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSCalendarDate.m ([NSCalendarDate -initWithString:
